resources/css/scss/sections/_content.scss
/* ... */
.disabled_header,
.post-type-archive-listings {
    .page-content {

        padding: 60px 0;
    }
}

//podcasts
.podcast_iframe {
    width: 100%;
}

//vendors 

.vendors_page {


    @include media (max-width, 1023px) {

        .hero_banner_wrap {

            .hero_banner {
                display: flex;
                flex-direction: column;

                figure.bg {
                    order: 2;
                }

                .grid-container {
                    order: 1;
                }

                .banner_wrap {
                    flex-direction: column !important;
                }

                .banner_right {
                    display: block !important;
                    width: 100% !important;
                    padding: 0 30px;
                }

            }
        }
    }
}
/* ... */

